Fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -6651,6 +6651,26 @@ ol.attention__list .attention__text::before {
   margin-top: -110px;
   background: -o-radial-gradient(67.21% 104.82%, 24.11% 128.12%, rgba(26, 28, 30, 0.73) 0%, #1A1C1E 100%);
   background: radial-gradient(24.11% 128.12% at 67.21% 104.82%, rgba(26, 28, 30, 0.73) 0%, #1A1C1E 100%);
+  /* width */
+  /* Track */
+  /* Handle */
+  /* Handle on hover */
+}
+
+.personal-area-section ::-webkit-scrollbar {
+  width: 10px;
+}
+
+.personal-area-section ::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.personal-area-section ::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+.personal-area-section ::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 .personal-area-section--calculator {
